--- a/GameHypnosis_dot_com_.html
+++ b/GameHypnosis_dot_com_.html
@@ -11,5 +11,5 @@
                     <li><a href="http://www.GameHypnosis.com" target="_blank" alt="http://www.GameHypnosis.com/alt">http://www.GameHypnosis.com/alt</a></li>
                </ol>
           </div>
-     <body>
+     </body>
 </html>
