--- a/GameHypnosis_dot_com_.html
+++ b/GameHypnosis_dot_com_.html
@@ -7,8 +7,10 @@
      <body>
           <div width=100% height=100%>
                <ol>
-                    <li><a href="http://www.GameHypnosis.com" target="_blank" alt="http://www.GameHypnosis.com">http://www.GameHypnosis.com</a></li>
-                    <li><a href="http://www.GameHypnosis.com" target="_blank" alt="http://www.GameHypnosis.com/alt">http://www.GameHypnosis.com/alt</a></li>
+                    <li><a href="http://www.gamehypnosis.com" target="_blank" alt="http://www.GameHypnosis.com">http://www.GameHypnosis.com</a></li>
+                    <li><a href="http://www.gamehypnosis.com/alt" target="_blank" alt="http://www.GameHypnosis.com/alt">http://www.GameHypnosis.com/alt</a></li>
+                    <li><a href="http://www.gamehypnosis.com/alt_beatles1" target="_blank" alt="http://www.GameHypnosis.com/alt_beatles1">http://www.GameHypnosis.com/alt_beatles1</a></li>
+                    <li><a href="http://www.gamehypnosis.com/alt_beatles2" target="_blank" alt="http://www.GameHypnosis.com/alt_beatles2">http://www.GameHypnosis.com/alt_beatles2</a></li>
                </ol>
           </div>
      </body>
